--- a/templates/k8s/10/docker-compose.yml
+++ b/templates/k8s/10/docker-compose.yml
@@ -17,6 +17,7 @@ kubelet:
         - --cluster-domain=cluster.local
         - --network-plugin=cni
         - --network-plugin-dir=/etc/cni/net.d
+        - --pod-infra-container-image=index.tenxcloud.com/google_containers/pause:2.0
     image: rancher/k8s:v1.3.0-rancher3
     volumes:
         - /var/run/docker.sock:/var/run/docker.sock
