--- a/infra-templates/hna-monitor-logging/config.yml
+++ b/infra-templates/hna-monitor-logging/config.yml
@@ -1,7 +1,7 @@
 name: HNA Monnitoring and Logging Agent
 description: |
   Monnitoring and Logging agent for HNA
-version: 0.1
+version: v0.1
 category: HNA
 labels:
   io.rancher.certified: rancher
