--- a/infra-templates/hna-monitor-logging/0/docker-compose.yml
+++ b/infra-templates/hna-monitor-logging/0/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '2'
+
 services:
   container-log:
-    image: "kswapd/container-log:0.4"
-    network_mode: "host"
+    image: kswapd/container-log:0.4
+    network_mode: host
     labels:
       caas.hna.log.container: 'true'
   container-monitor:
     privileged: true
-    image: "mutemaniac/container-monitor:latest"
+    image: mutemaniac/container-monitor:latest
     volumes:
     - /:/rootfs:ro
     - /var/run:/var/run:rw
