rename template name

--- a/project-templates/cattle-admin/0/project.yml
+++ b/project-templates/cattle-admin/0/project.yml
@@ -1,5 +1,5 @@
-name: Cattle
-description: Default Cattle template
+name: HNA-Admin
+description: HNA admin template
 stacks:
   - name: network-services
     templateId: 'library:infra*network-services'
