--- a/infra-templates/hna-monitor-logging/1/docker-compose.yml
+++ b/infra-templates/hna-monitor-logging/1/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     network_mode: host
     labels:
       caas.hna.log.container: 'true'
+      io.rancher.scheduler.global: 'true'
   container-monitor:
     privileged: true
     image: mutemaniac/container-monitor:i0.7
@@ -18,3 +19,4 @@ services:
       - INFLUXDB_RELAY_HOST=internal-hna-caas-product-bd-influxdb-lb-1872922884.cn-north-1.elb.amazonaws.com.cn:8086
     labels:
       caas.hna.monitor.container: 'true'
+      io.rancher.scheduler.global: 'true'
