--- a/infra-templates/k8s/17/docker-compose.yml
+++ b/infra-templates/k8s/17/docker-compose.yml
@@ -17,7 +17,8 @@ kubelet:
         - --cluster-domain=cluster.local
         - --network-plugin=cni
         - --network-plugin-dir=/etc/cni/managed.d
-    image: rancher/k8s:v1.5.1-rancher1-7
+        - --pod-infra-container-image=${RANCHER_K8S_REGISTRY}/google-containers/pause-amd64:3.0
+    image: ${RANCHER_K8S_REGISTRY}/${RANCHER_K8S_NAMESPACE}/k8s:v1.5.1-rancher1-7
     volumes:
         - /run:/run
         - /var/run:/var/run
@@ -43,7 +44,7 @@ proxy:
         - --master=http://kubernetes.kubernetes.rancher.internal
         - --v=2
         - --healthz-bind-address=0.0.0.0
-    image: rancher/k8s:v1.5.1-rancher1-7
+    image: ${RANCHER_K8S_REGISTRY}/${RANCHER_K8S_NAMESPACE}/k8s:v1.5.1-rancher1-7
     privileged: true
     net: host
     links:
@@ -96,7 +97,7 @@ kubernetes:
         - --runtime-config=batch/v2alpha1
     environment:
         KUBERNETES_URL: https://kubernetes.kubernetes.rancher.internal:6443
-    image: rancher/k8s:v1.5.1-rancher1-7
+    image: ${RANCHER_K8S_REGISTRY}/${RANCHER_K8S_NAMESPACE}/k8s:v1.5.1-rancher1-7
     links:
         - etcd
 
@@ -126,7 +127,7 @@ scheduler:
         - kube-scheduler
         - --master=http://kubernetes.kubernetes.rancher.internal
         - --address=0.0.0.0
-    image: rancher/k8s:v1.5.1-rancher1-7
+    image: ${RANCHER_K8S_REGISTRY}/${RANCHER_K8S_NAMESPACE}/k8s:v1.5.1-rancher1-7
     labels:
         io.rancher.scheduler.affinity:host_label_soft: orchestration=true
     links:
@@ -141,7 +142,7 @@ controller-manager:
         - --kubeconfig=/etc/kubernetes/ssl/kubeconfig
         - --root-ca-file=/etc/kubernetes/ssl/ca.pem
         - --service-account-private-key-file=/etc/kubernetes/ssl/key.pem
-    image: rancher/k8s:v1.5.1-rancher1-7
+    image: ${RANCHER_K8S_REGISTRY}/${RANCHER_K8S_NAMESPACE}/k8s:v1.5.1-rancher1-7
     labels:
         io.rancher.scheduler.affinity:host_label_soft: orchestration=true
         io.rancher.container.create_agent: "true"
@@ -179,7 +180,7 @@ rancher-ingress-controller:
         - kubernetes
 
 addon-starter:
-    image: rancher/k8s:v1.5.1-rancher1-7
+    image: ${RANCHER_K8S_REGISTRY}/${RANCHER_K8S_NAMESPACE}/k8s:v1.5.1-rancher1-7
     labels:
         io.rancher.container.create_agent: 'true'
         io.rancher.container.agent.role: environmentAdmin
