--- a/infra-templates/k8s/17/rancher-compose.yml
+++ b/infra-templates/k8s/17/rancher-compose.yml
@@ -31,6 +31,18 @@
     options:
      - rancher
      - aws
+  - variable: RANCHER_K8S_REGISTRY
+    label: Rancher K8s Registry
+    description: Pull rancher k8s images from this Registry
+    required: true
+    default: registry.cn-hangzhou.aliyuncs.com
+    type: string
+  - variable: RANCHER_K8S_NAMESPACE
+    label: Rancher K8s Namespace
+    description: The namespace of rancher k8s image
+    required: true
+    default: rancher-cn
+    type: string
 
 kubernetes:
     metadata:
