--- a/infra-templates/hna-glb/0/rancher-compose.yml
+++ b/infra-templates/hna-glb/0/rancher-compose.yml
@@ -1,6 +1,8 @@
 .catalog:
   name: "HNA GLB"
   version: "v0.1"
+  minimum_rancher_version: v1.2.2-h1
+  maximum_rancher_version: v1.3.99
   questions:
     - variable: "${GLB_PORT}"
       label: "GLB Port"
